# SCA-Prun

./: CMakeLists.txt  README.md  start.py
Trimmer-master/: CMakeLists.txt
Trimmer-master/src/: BBInfo.h  BBOps.cpp  BBOps.h  ConstantFolding.cpp  ConstantFolding.h  ContextInfo.cpp  ContextInfo.h  Debug.cpp  Debug.h  FuncInfo.cpp  FuncInfo.h  Global.cpp  Global.h  LoopUnrollTest.cpp  LoopUnrollTest.h  LoopUnroller.cpp  LoopUnroller.h  Mem.h  ModSet.cpp  ModSet.h  RegOps.cpp  RegOps.h  Stats.cpp  Stats.h  StringUtils.cpp  StringUtils.h  TrackInfo.cpp  TrackInfo.h  Utils.cpp  Utils.h  VecUtils.cpp  VecUtils.h
Trimmer-master/src/spec/: SpecFileIO.cpp  SpecFileIO.h  SpecGetopt.cpp  SpecGetopt.h  SpecHeap.cpp  SpecHeap.h  SpecLibc.cpp  SpecLibc.h  SpecString.cpp  SpecString.h  SpecSyscall.cpp  SpecSyscall.h
archIR/: analysis.py  build.py  callgraph.py  config.py  dataset.py  elf.py  main.py  makepkg.conf  moduleInfo.py  pkgInfo.py  tiny.json
mlta/src/lib/: Analyzer.cc  CMakeLists.txt  CallGraph.cc  Common.cc  Common.h  Config.h
pdg/include/: ControlDependencyGraph.hpp  ControlDependencyGraph2.hpp  DataDependencyGraph.hpp  ProgramDependencyGraph.hpp
pdg/src/: ControlDependencyGraph2.cpp  DataDependencyGraph.cpp  DepPrinter.cpp  ProgramDependencyGraph.cpp
script/: ca-compare.py  ca-off.txt  ca-on.txt
src/: CGDumper-svf.cpp  CGDumper.cpp  CHADumper.cpp  CMakeLists.txt  CallSiteMarker.cpp  PreAnalysis-old.cpp  PreAnalysis.cpp  cg.py  tinyAnalysis-multi.cpp  tinyAnalysis.cpp
test/: cg-off.txt  lib.bc  linked.bc  linked.ll  linked_csm.bc  log.txt  main.bc  xcur2png-r.dot  xcur2png.dot
